# Decentralized-competitive-community

./: .env.example  .gitignore  Makefile  README.md  UV_MIGRATION.md  alembic.ini  dev-compose.yml  docker-compose.yml  init_benchmarks.py  install-uv.sh  local.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-runtime.yml  fly-deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py
apps/backend/: Dockerfile  auth.py  config.py  database.py  fly.toml  main.py  models.py  queue.py  utils.py
apps/bench-cli/: main.py
apps/bench-cli/runtime/: Dockerfile  run_eval.py
apps/frontend/: package.json  pnpm-lock.yaml  tsconfig.json
apps/frontend/.next/: trace
apps/frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
apps/frontend/app/: globals.css  layout.tsx
apps/frontend/app/leaderboard/: page.tsx
apps/frontend/lib/: fetcher.ts
env/: dev.sh
tests/: test_smoke.py
